# DesignPatternsDemos

./: .gitignore  README.md
01-Builder-exercise/: CMakeLists.txt  main.cpp
01-builder/: CMakeLists.txt  main.cpp
01_builderFacets/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  main.cpp
01_builder_groovyStyle/: CMakeLists.txt  main.cpp
02_AbstractFactory/: CMakeLists.txt  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  main.cpp
02_Factories/: CMakeLists.txt  main  main.cpp
02_FactoryCodingExercise/: CMakeLists.txt  main.cpp
03_Prortotypes/: CMakeLists.txt  main.cpp
04_Monostate/: CMakeLists.txt  main.cpp
04_Multiton/: CMakeLists.txt  main.cpp
04_Singleton/: CMakeLists.txt  capitals.txt  main.cpp
04_Singleton_DI/: CMakeLists.txt  main.cpp
07_Adapter/: CMakeLists.txt  Geometry.h  README.md  graphics_gui  graphics_gui.cxx  graphics_gui.h  main.cpp
Doc/: Design Patterns Course.odt
